# python_cpp_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bindings.cpp  setup.py
.eggs/: tests-0.7-py3.6.egg
docs/: Doxyfile  Makefile  conf.py  index.rst  python_code.rst
docs/_generate/: python_cpp_example.add.rst  python_cpp_example.subtract.rst
python_cpp_example/: bindings.cpp  main.cpp  main.hpp  math.cpp
src/python_cpp_example/: __init__.py  bindings.cpp  hello.py
tests/: cpp_test.py  math_test.py  test_math.cpp
